[gd_scene load_steps=9 format=3 uid="uid://ctaboy2ynsoel"]

[ext_resource type="Script" uid="uid://c545cdpty8qhe" path="res://scenes/visualisations/surfers/visualisation.gd" id="1_s3p1r"]
[ext_resource type="PackedScene" uid="uid://bvf1ybjl7k11r" path="res://scenes/visualisations/surfers/stage_1.tscn" id="2_rtl32"]
[ext_resource type="PackedScene" uid="uid://be6krggkl251t" path="res://scenes/ui/game_states/win_screen.tscn" id="3_gne4c"]
[ext_resource type="PackedScene" uid="uid://cg880pmddjqbh" path="res://scenes/ui/game_states/lose_screen.tscn" id="4_mpqlg"]

[sub_resource type="Animation" id="Animation_kmt88"]
length = 0.001

[sub_resource type="Animation" id="Animation_y3pbu"]
resource_name = "fail"
length = 0.3

[sub_resource type="Animation" id="Animation_mm13q"]
resource_name = "success"
length = 0.4

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mm13q"]
_data = {
&"RESET": SubResource("Animation_kmt88"),
&"fail": SubResource("Animation_y3pbu"),
&"success": SubResource("Animation_mm13q")
}

[node name="Visualisation" type="SubViewportContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
script = ExtResource("1_s3p1r")

[node name="Viewport" type="SubViewport" parent="."]
unique_name_in_owner = true
disable_3d = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="World" type="Node2D" parent="Viewport"]

[node name="Camera" type="Camera2D" parent="Viewport/World"]
unique_name_in_owner = true
position = Vector2(576, 324)

[node name="Stage" parent="Viewport/World" instance=ExtResource("2_rtl32")]
unique_name_in_owner = true

[node name="Animation" type="AnimationPlayer" parent="Viewport"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_mm13q")
}

[node name="win_screen" parent="." instance=ExtResource("3_gne4c")]
visible = false
layout_mode = 2

[node name="lose_screen" parent="." instance=ExtResource("4_mpqlg")]
visible = false
layout_mode = 2

[connection signal="fail" from="." to="Viewport/World/Stage" method="typing_incorrect"]
[connection signal="success" from="." to="Viewport/World/Stage" method="typing_correct"]
[connection signal="back" from="win_screen" to="." method="back"]
[connection signal="restart" from="win_screen" to="." method="restart_game"]
[connection signal="back" from="lose_screen" to="." method="back"]
[connection signal="restart" from="lose_screen" to="." method="restart_game"]
